fix: sonarqube issues (#45)