@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,13 +20,13 @@ public class AirfieldService {
         return Optional.of(airfieldRepository.findAllByAcceptVfrIsTrue()
                 .stream()
                 .map(airfieldMapper::map)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     public Optional<List<AirfieldDto>> getAllAirfields() {
         return Optional.of(airfieldRepository.findAll()
                 .stream()
                 .map(airfieldMapper::map)
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
